--- a/package.json
+++ b/package.json
@@ -6,24 +6,36 @@
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
+    "precommit": "pretty-quick --staged",
     "eject": "expo eject"
   },
   "dependencies": {
     "@builderx/utils": "^0.1.6",
     "@expo/vector-icons": "^6.3.1",
+    "axios": "^0.18.0",
     "expo": "^30.0.1",
+    "expo-cli": "^2.2.5",
     "mobx": "^5.5.0",
-    "mobx-react": "^5.2.8",
+    "mobx-react": "^5.3.1",
     "native-base": "^2.8.0",
     "react": "16.3.1",
+    "react-columns": "^1.2.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-30.0.0.tar.gz",
     "react-native-easy-grid": "^0.2.0",
     "react-native-elements": "^0.19.1",
     "react-native-hr": "^1.1.4",
     "react-native-hr-plus": "^1.0.6",
+    "react-native-material-bottom-navigation": "^1.0.2",
     "react-native-search-bar": "^3.4.2",
     "react-native-svg": "^7.0.3",
-    "react-native-vector-icons": "^5.0.0",
+    "react-native-swiper": "^1.5.13",
+    "react-native-vector-icons": "^6.0.2",
+    "react-native-view-overflow": "^0.0.3",
     "react-navigation": "^2.17.0"
+  },
+  "devDependencies": {
+    "husky": "^1.1.2",
+    "prettier": "1.14.3",
+    "pretty-quick": "^1.8.0"
   }
 }
