--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "@expo/vector-icons": "^6.3.1",
     "axios": "^0.18.0",
     "expo": "^30.0.1",
-    "expo-cli": "^2.2.5",
+    "expo-cli": "^2.3.5",
+    "jwt-decode": "^2.2.0",
     "mobx": "^5.5.0",
     "mobx-react": "^5.3.1",
     "native-base": "^2.8.0",
