--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@builderx/utils": "^0.1.6",
     "@expo/vector-icons": "^6.3.1",
+    "accordion-collapse-react-native": "^0.1.7",
     "axios": "^0.18.0",
     "expo": "^30.0.1",
     "expo-cli": "^2.3.5",
@@ -22,11 +23,13 @@
     "react": "16.3.1",
     "react-columns": "^1.2.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-30.0.0.tar.gz",
+    "react-native-collapse-view": "^1.0.0",
     "react-native-easy-grid": "^0.2.0",
     "react-native-elements": "^0.19.1",
     "react-native-hr": "^1.1.4",
     "react-native-hr-plus": "^1.0.6",
     "react-native-material-bottom-navigation": "^1.0.2",
+    "react-native-modal-datetime-picker": "^6.0.0",
     "react-native-search-bar": "^3.4.2",
     "react-native-svg": "^7.0.3",
     "react-native-swiper": "^1.5.13",
