--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-native-material-bottom-navigation": "^1.0.2",
     "react-native-modal-datetime-picker": "^6.0.0",
     "react-native-search-bar": "^3.4.2",
+    "react-native-super-grid": "^2.4.3",
     "react-native-svg": "^7.0.3",
     "react-native-swiper": "^1.5.13",
     "react-native-vector-icons": "^6.0.2",
