--- a/package.json
+++ b/package.json
@@ -16,21 +16,28 @@
     "axios": "^0.18.0",
     "expo": "^30.0.1",
     "expo-cli": "^2.3.5",
+    "i18n": "^0.8.3",
+    "i18next": "^12.1.0",
+    "i18next-react-native-language-detector": "^1.0.2",
     "jwt-decode": "^2.2.0",
     "mobx": "^5.5.0",
     "mobx-react": "^5.3.1",
     "native-base": "^2.8.0",
     "react": "16.3.1",
     "react-columns": "^1.2.0",
+    "react-i18next": "^8.3.8",
     "react-native": "https://github.com/expo/react-native/archive/sdk-30.0.0.tar.gz",
     "react-native-collapse-view": "^1.0.0",
     "react-native-easy-grid": "^0.2.0",
     "react-native-elements": "^0.19.1",
     "react-native-hr": "^1.1.4",
     "react-native-hr-plus": "^1.0.6",
+    "react-native-locale-detector": "^1.0.1",
     "react-native-material-bottom-navigation": "^1.0.2",
     "react-native-modal-datetime-picker": "^6.0.0",
     "react-native-search-bar": "^3.4.2",
+    "react-native-select-input": "^1.0.1",
+    "react-native-select-input-ios": "^1.2.0",
     "react-native-super-grid": "^2.4.3",
     "react-native-svg": "^7.0.3",
     "react-native-swiper": "^1.5.13",
