remove circlec in pulse
remove circlec in pulse

--- a/package.json
+++ b/package.json
@@ -14,7 +14,6 @@
     "@expo/vector-icons": "^6.3.1",
     "accordion-collapse-react-native": "^0.1.7",
     "axios": "^0.18.0",
-    "core-js": "^2.6.0",
     "expo": "^30.0.1",
     "expo-cli": "^2.3.5",
     "i18n": "^0.8.3",
@@ -30,7 +29,7 @@
     "react-native": "https://github.com/expo/react-native/archive/sdk-30.0.0.tar.gz",
     "react-native-collapse-view": "^1.0.0",
     "react-native-easy-grid": "^0.2.0",
-    "react-native-elements": "^1.0.0-beta2",
+    "react-native-elements": "^0.19.1",
     "react-native-hr": "^1.1.4",
     "react-native-hr-plus": "^1.0.6",
     "react-native-locale-detector": "^1.0.1",
