--- a/app.json
+++ b/app.json
@@ -25,6 +25,10 @@
     ],
     "ios": {
       "supportsTablet": true
+    },
+    "android": {
+      "package": "com.kuwaithospital.doctorapp",
+      "googleServicesFile": "./google-services.json"
     }
   }
 }
