--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
   "expo": {
-    "name": "doctor-app-frontend",
+    "name": "Doctor Online App",
     "description": "This project is really great.",
     "slug": "doctor-app-frontend",
     "privacy": "public",
@@ -9,7 +9,7 @@
       "ios",
       "android"
     ],
-    "version": "1.0.0",
+    "version": "1.0.1",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
     "splash": {
@@ -24,10 +24,11 @@
       "**/*"
     ],
     "ios": {
+      "bundleIdentifier": "com.doctoronline.app",
       "supportsTablet": true
     },
     "android": {
-      "package": "com.kuwaithospital.doctorapp",
+      "package": "com.doctoronline.app",
       "googleServicesFile": "./google-services.json"
     }
   }
