--- a/app.json
+++ b/app.json
@@ -1,8 +1,8 @@
 {
   "expo": {
-    "name": "Doctor Online App",
+    "name": "Mohammad Shehata",
     "description": "This project is really great.",
-    "slug": "doctor-app-frontend",
+    "slug": "Mohammad Shehata",
     "privacy": "public",
     "sdkVersion": "30.0.0",
     "platforms": [
