--- a/package.json
+++ b/package.json
@@ -16,19 +16,20 @@
     "accordion-collapse-react-native": "^0.1.7",
     "axios": "^0.18.0",
     "boxen": "^2.1.0",
-    "expo": "^30.0.1",
+    "expo": "^33.0.0",
     "expo-cli": "^2.3.5",
     "i18n": "^0.8.3",
     "i18next": "^12.1.0",
     "i18next-react-native-language-detector": "^1.0.2",
     "jwt-decode": "^2.2.0",
+    "metro": "^0.55.0",
     "mobx": "^5.5.0",
     "mobx-react": "^5.3.1",
     "native-base": "^2.8.0",
-    "react": "16.3.1",
+    "react": "16.8.3",
     "react-columns": "^1.2.0",
     "react-i18next": "^8.3.8",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-30.0.0.tar.gz",
+    "react-native": "https://github.com/expo/react-native/archive/sdk-33.0.0.tar.gz",
     "react-native-collapse-view": "^1.0.0",
     "react-native-easy-grid": "^0.2.0",
     "react-native-elements": "^0.19.1",
@@ -47,14 +48,14 @@
     "react-native-swiper": "^1.5.13",
     "react-native-vector-icons": "^6.0.2",
     "react-native-view-overflow": "^0.0.3",
-    "react-navigation": "^2.17.0"
+    "react-navigation": "^3.11.0"
   },
   "devDependencies": {
     "husky": "^1.1.2",
     "prettier": "1.14.3",
     "pretty-quick": "^1.8.0",
     "react-devtools": "^3.4.3",
-    "jest-expo": "29.0.0"
+    "jest-expo": "^33.0.0"
   },
   "jest": {
     "preset": "jest-expo"
