--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
   "expo": {
-    "name": "Mohammad Shehata",
+    "name": "Doctor Online",
     "description": "This project is really great.",
     "slug": "aalnjjar",
     "privacy": "public",
