--- a/package.json
+++ b/package.json
@@ -11,8 +11,9 @@
     "react-devtools": "react-devtools"
   },
   "dependencies": {
+    "@babel/plugin-transform-react-jsx-source": "^7.5.0",
     "@builderx/utils": "^0.1.6",
-    "@expo/vector-icons": "^6.3.1",
+    "@expo/vector-icons": "^10.0.3",
     "accordion-collapse-react-native": "^0.1.7",
     "axios": "^0.18.0",
     "boxen": "^2.1.0",
@@ -22,6 +23,7 @@
     "i18next": "^12.1.0",
     "i18next-react-native-language-detector": "^1.0.2",
     "jwt-decode": "^2.2.0",
+    "lottie-react-native": "^2.6.1",
     "metro": "^0.55.0",
     "mobx": "^5.5.0",
     "mobx-react": "^5.3.1",
