--- a/app.json
+++ b/app.json
@@ -1,10 +1,10 @@
 {
   "expo": {
-    "name": "Mohammad Shehata",
+    "name": "DoctorKW",
     "description": "This project is really great.",
-    "slug": "Mohammad Shehata",
+    "slug": "DoctorKW",
     "privacy": "public",
-    "sdkVersion": "30.0.0",
+    "sdkVersion": "32.0.0",
     "platforms": [
       "ios",
       "android"
